-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9, 10, 11, 12
-
Component/s: hotspot
-
b18
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226504 | 11.0.5-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b02 |
| JDK-8225704 | 11.0.5 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
compiler/codecache/cli/printcodecache/TestPrintCodeCacheOption.java
compiler/codecache/CheckReservedInitialCodeCacheSizeArgOrder.java
fail on machine with a lot of cores
stdout: [Error occurred during initialization of VM
Not enough space in non-nmethod code heap to run VM: 20480K < 21475K
];
stderr: []
exitValue = 1
Please note, tests failed on Intel Xeon hosts with -XX:UseAVX=3
- backported by
-
JDK-8225704 Tests fail due to code cache exhaustion on machines with many cores
-
- Resolved
-
-
JDK-8226504 Tests fail due to code cache exhaustion on machines with many cores
-
- Resolved
-
- duplicates
-
JDK-8177918 Test compiler/codecache/CheckReservedInitialCodeCacheSizeArgOrder.java fails
-
- Closed
-
-
JDK-8212727 [TESTBUG] TestPrintCodeCacheOption.java failed on machine with a lot CPUs
-
- Closed
-
- relates to
-
JDK-8213086 Compiler thread creation should be bounded by available space in memory and Code Cache
-
- Resolved
-
-
JDK-8354727 CompilationPolicy creates too many compiler threads when code cache space is scarce
-
- Resolved
-
-
JDK-8198756 Lazy allocation of compiler threads
-
- Resolved
-