8177899: Tests fail due to code cache exhaustion on machines with many cores

Implemented upper limit on CICompilerCount based on code cache size.

Reviewed-by: kvn, mdoerr